--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@stimulus-components/popover": "^7.0.0",
+    "@stimulus-components/reveal": "^5.0.0",
     "flowbite": "^2.3.0",
     "preline": "^2.1.0"
   }
