--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@
 /app/assets/builds/*
 !/app/assets/builds/.keep
 .env*
+
+# Ignore Yarn errors as unnecessary to upload to the GitHub repository
+yarn-error.log
