Commented out lint workflow job for now, removed env db test step and made localhost changes in workflow and database yml files

--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -14,6 +14,7 @@ jobs:
       postgres:
         image: postgres:16
         env:
+          PGHOST: localhost
           POSTGRES_DB: nebula_rails_test
           POSTGRES_USER: nebula_rails
           POSTGRES_PASSWORD: postgres
@@ -23,9 +24,6 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-    env:
-      RAILS_ENV: test
-      DATABASE_URL: "postgres://rails:password@localhost:5432/rails_test"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -38,14 +36,14 @@ jobs:
       - name: Run tests
         run: bin/rake
 
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Install Ruby and gems
-        uses: ruby/setup-ruby@v1
-        with:
-          bundler-cache: true
-      - name: Security audit dependencies
-        run: bin/bundler-audit --update
+  # lint:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v3
+  #     - name: Install Ruby and gems
+  #       uses: ruby/setup-ruby@v1
+  #       with:
+  #         bundler-cache: true
+  #     - name: Security audit dependencies
+  #       run: bin/bundler-audit --update
