--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -45,4 +45,4 @@ jobs:
         with:
           bundler-cache: true
       - name: Security audit dependencies
-        run: bin/bundler-audit --update
+        run: bundle audit
