updated to bundler-audit --update command for lint workflow job

--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -45,4 +45,4 @@ jobs:
         with:
           bundler-cache: true
       - name: Security audit dependencies
-        run: bundle audit
+        run: bundler-audit --update
