updated to bundle exec bundler-audit --update command for lint workflow job and provided it with a name of Bundler Audit

--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -36,6 +36,7 @@ jobs:
         run: bin/rake
 
   lint:
+    name: Bundler Audit
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -45,4 +46,4 @@ jobs:
         with:
           bundler-cache: true
       - name: Security audit dependencies
-        run: bundler-audit --update
+        run: bundle exec bundler-audit --update
