Re-added runs on instruction for lint workflow

--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -44,6 +44,7 @@ jobs:
 
   lint:
     name: Bundler Audit
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
