--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -4,11 +4,13 @@
 #
 # This workflow will install a prebuilt Ruby version, install dependencies, and
 # run tests and linters.
-name: "Ruby on Rails CI"
-on: [push]
+name: Ruby on Rails CI
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-
   verify:
     name: Build
     runs-on: ubuntu-latest
@@ -29,7 +31,7 @@ jobs:
           --health-retries 5
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@v1
         with:
@@ -38,21 +40,13 @@ jobs:
         run: bin/rails db:schema:load
       - name: Run tests
         run: bin/rake
-      - name: setup databases
-        env:
-          PGHOST: localhost
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_USER: postgres
-          RAILS_ENV: test
-      - name: Run tests
-        run: bundle exec rake
 
   lint:
     name: Bundler Audit
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@v1
         with:
