--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -15,37 +15,25 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:11
-        env:
-          PGHOST: localhost
-          POSTGRES_DB: nebula_rails_test
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-        ports: ["5432:5432"]
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      # Add other necessary steps here
 
-    test:
-      name: Tests
-
-      runs-on: ubuntu-latest
-
-      steps:
-        - name: Checkout code
-          uses: actions/checkout@v4
-        - name: Install Ruby and gems
-          uses: ruby/setup-ruby@v1
-          with:
-            bundler-cache: true
-        - name: Set up database schema
-          run: bin/rails db:schema:load
-        - name: Run tests
-          run: bin/rake
+  test:
+    name: Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install Ruby and gems
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+      - name: Set up database schema
+        run: bin/rails db:schema:load
+      - name: Run tests
+        run: bin/rake
 
   lint:
     name: Bundler Audit
